up to speed iwth in mem db