@@ -17,13 +17,13 @@
 package io.supertokens.storage.postgresql.queries;
 
 import io.supertokens.pluginInterface.RowMapper;
+import io.supertokens.pluginInterface.authRecipe.LoginMethod;
 import io.supertokens.pluginInterface.emailpassword.PasswordResetTokenInfo;
 import io.supertokens.pluginInterface.emailpassword.UserInfo;
 import io.supertokens.pluginInterface.exceptions.StorageQueryException;
 import io.supertokens.pluginInterface.exceptions.StorageTransactionLogicException;
 import io.supertokens.pluginInterface.multitenancy.AppIdentifier;
 import io.supertokens.pluginInterface.multitenancy.TenantIdentifier;
-import io.supertokens.storage.postgresql.ConnectionPool;
 import io.supertokens.storage.postgresql.Start;
 import io.supertokens.storage.postgresql.config.Config;
 import io.supertokens.storage.postgresql.utils.Utils;
@@ -32,6 +32,7 @@ import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static io.supertokens.pluginInterface.RECIPE_ID.EMAIL_PASSWORD;
 import static io.supertokens.storage.postgresql.QueryExecutorTemplate.execute;
@@ -52,7 +53,8 @@ public class EmailPasswordQueries {
                 + "time_joined BIGINT NOT NULL,"
                 + "CONSTRAINT " + Utils.getConstraintName(schema, emailPasswordUsersTable, "user_id", "fkey")
                 + " FOREIGN KEY(app_id, user_id)"
-                + " REFERENCES " + Config.getConfig(start).getAppIdToUserIdTable() +  " (app_id, user_id) ON DELETE CASCADE,"
+                + " REFERENCES " + Config.getConfig(start).getAppIdToUserIdTable() +
+                " (app_id, user_id) ON DELETE CASCADE,"
                 + "CONSTRAINT " + Utils.getConstraintName(schema, emailPasswordUsersTable, null, "pkey")
                 + " PRIMARY KEY (app_id, user_id)"
                 + ");";
@@ -74,7 +76,8 @@ public class EmailPasswordQueries {
                 + " PRIMARY KEY (app_id, tenant_id, user_id),"
                 + "CONSTRAINT " + Utils.getConstraintName(schema, emailPasswordUserToTenantTable, "user_id", "fkey")
                 + " FOREIGN KEY (app_id, tenant_id, user_id)"
-                + " REFERENCES " + Config.getConfig(start).getUsersTable() + "(app_id, tenant_id, user_id) ON DELETE CASCADE"
+                + " REFERENCES " + Config.getConfig(start).getUsersTable() +
+                "(app_id, tenant_id, user_id) ON DELETE CASCADE"
                 + ");";
         // @formatter:on
     }
@@ -87,7 +90,8 @@ public class EmailPasswordQueries {
                 + "app_id VARCHAR(64) DEFAULT 'public',"
                 + "user_id CHAR(36) NOT NULL,"
                 + "token VARCHAR(128) NOT NULL"
-                + " CONSTRAINT " + Utils.getConstraintName(schema, passwordResetTokensTable, "token", "key") + " UNIQUE,"
+                + " CONSTRAINT " + Utils.getConstraintName(schema, passwordResetTokensTable, "token", "key") +
+                " UNIQUE,"
                 + "token_expiry BIGINT NOT NULL,"
                 + "CONSTRAINT " + Utils.getConstraintName(schema, passwordResetTokensTable, null, "pkey")
                 + " PRIMARY KEY (app_id, user_id, token),"
@@ -115,7 +119,8 @@ public class EmailPasswordQueries {
         update(start, QUERY, pst -> pst.setLong(1, currentTimeMillis()));
     }
 
-    public static void updateUsersPassword_Transaction(Start start, Connection con, AppIdentifier appIdentifier, String userId, String newPassword)
+    public static void updateUsersPassword_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                       String userId, String newPassword)
             throws SQLException, StorageQueryException {
         String QUERY = "UPDATE " + getConfig(start).getEmailPasswordUsersTable()
                 + " SET password_hash = ? WHERE app_id = ? AND user_id = ?";
@@ -127,7 +132,8 @@ public class EmailPasswordQueries {
         });
     }
 
-    public static void updateUsersEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier, String userId, String newEmail)
+    public static void updateUsersEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                    String userId, String newEmail)
             throws SQLException, StorageQueryException {
         {
             String QUERY = "UPDATE " + getConfig(start).getEmailPasswordUsersTable()
@@ -151,10 +157,12 @@ public class EmailPasswordQueries {
         }
     }
 
-    public static void deleteAllPasswordResetTokensForUser_Transaction(Start start, Connection con, AppIdentifier appIdentifier, String userId)
+    public static void deleteAllPasswordResetTokensForUser_Transaction(Start start, Connection con,
+                                                                       AppIdentifier appIdentifier, String userId)
             throws SQLException, StorageQueryException {
 
-        String QUERY = "DELETE FROM " + getConfig(start).getPasswordResetTokensTable() + " WHERE app_id = ? AND user_id = ?";
+        String QUERY =
+                "DELETE FROM " + getConfig(start).getPasswordResetTokensTable() + " WHERE app_id = ? AND user_id = ?";
 
         update(con, QUERY, pst -> {
             pst.setString(1, appIdentifier.getAppId());
@@ -208,25 +216,21 @@ public class EmailPasswordQueries {
         });
     }
 
-    public static UserInfo getUserInfoUsingId_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
-                                                          String id)
+    public static boolean lockEmailPasswordTableUsingId_Transaction(Start start, Connection con,
+                                                                    AppIdentifier appIdentifier,
+                                                                    String id)
             throws SQLException, StorageQueryException {
-        String QUERY = "SELECT user_id, email, password_hash, time_joined FROM "
+        String QUERY = "SELECT user_id FROM "
                 + getConfig(start).getEmailPasswordUsersTable()
                 + " WHERE app_id = ? AND user_id = ? FOR UPDATE";
-        UserInfoPartial userInfo = execute(con, QUERY, pst -> {
+        return execute(con, QUERY, pst -> {
             pst.setString(1, appIdentifier.getAppId());
             pst.setString(2, id);
-        }, result -> {
-            if (result.next()) {
-                return UserInfoRowMapper.getInstance().mapOrThrow(result);
-            }
-            return null;
-        });
-        return userInfoWithTenantIds_transaction(start, con, appIdentifier, userInfo);
+        }, ResultSet::next);
     }
 
-    public static PasswordResetTokenInfo getPasswordResetTokenInfo(Start start, AppIdentifier appIdentifier, String token)
+    public static PasswordResetTokenInfo getPasswordResetTokenInfo(Start start, AppIdentifier appIdentifier,
+                                                                   String token)
             throws SQLException, StorageQueryException {
         String QUERY = "SELECT user_id, token, token_expiry FROM " + getConfig(start).getPasswordResetTokensTable()
                 + " WHERE app_id = ? AND token = ?";
@@ -241,7 +245,8 @@ public class EmailPasswordQueries {
         });
     }
 
-    public static void addPasswordResetToken(Start start, AppIdentifier appIdentifier, String userId, String tokenHash, long expiry)
+    public static void addPasswordResetToken(Start start, AppIdentifier appIdentifier, String userId, String tokenHash,
+                                             long expiry)
             throws SQLException, StorageQueryException {
         String QUERY = "INSERT INTO " + getConfig(start).getPasswordResetTokensTable()
                 + "(app_id, user_id, token, token_expiry)" + " VALUES(?, ?, ?, ?)";
@@ -254,7 +259,8 @@ public class EmailPasswordQueries {
         });
     }
 
-    public static UserInfo signUp(Start start, TenantIdentifier tenantIdentifier, String userId, String email, String passwordHash, long timeJoined)
+    public static UserInfo signUp(Start start, TenantIdentifier tenantIdentifier, String userId, String email,
+                                  String passwordHash, long timeJoined)
             throws StorageQueryException, StorageTransactionLogicException {
         return start.startTransaction(con -> {
             Connection sqlCon = (Connection) con.getConnection();
@@ -271,13 +277,15 @@ public class EmailPasswordQueries {
 
                 { // all_auth_recipe_users
                     String QUERY = "INSERT INTO " + getConfig(start).getUsersTable()
-                            + "(app_id, tenant_id, user_id, recipe_id, time_joined)" + " VALUES(?, ?, ?, ?, ?)";
+                            + "(app_id, tenant_id, user_id, primary_or_recipe_user_id, recipe_id, time_joined)" +
+                            " VALUES(?, ?, ?, ?, ?, ?)";
                     update(sqlCon, QUERY, pst -> {
                         pst.setString(1, tenantIdentifier.getAppId());
                         pst.setString(2, tenantIdentifier.getTenantId());
                         pst.setString(3, userId);
-                        pst.setString(4, EMAIL_PASSWORD.toString());
-                        pst.setLong(5, timeJoined);
+                        pst.setString(4, userId);
+                        pst.setString(5, EMAIL_PASSWORD.toString());
+                        pst.setLong(6, timeJoined);
                     });
                 }
 
@@ -306,10 +314,11 @@ public class EmailPasswordQueries {
                     });
                 }
 
-                UserInfo userInfo = userInfoWithTenantIds_transaction(start, sqlCon, tenantIdentifier.toAppIdentifier(), new UserInfoPartial(userId, email, passwordHash, timeJoined));
-
+                UserInfoPartial userInfo = new UserInfoPartial(userId, email, passwordHash, timeJoined);
+                fillUserInfoWithTenantIds_transaction(start, sqlCon, tenantIdentifier.toAppIdentifier(), userInfo);
+                fillUserInfoWithVerified_transaction(start, sqlCon, tenantIdentifier.toAppIdentifier(), userInfo);
                 sqlCon.commit();
-                return userInfo;
+                return new UserInfo(userId, false, userInfo.toLoginMethod());
             } catch (SQLException throwables) {
                 throw new StorageTransactionLogicException(throwables);
             }
@@ -339,24 +348,10 @@ public class EmailPasswordQueries {
         });
     }
 
-    public static UserInfo getUserInfoUsingId(Start start, AppIdentifier appIdentifier, String id) throws SQLException, StorageQueryException {
-        String QUERY = "SELECT user_id, email, password_hash, time_joined FROM "
-                + getConfig(start).getEmailPasswordUsersTable() + " WHERE app_id = ? AND user_id = ?";
-
-        UserInfoPartial userInfo = execute(start, QUERY.toString(), pst -> {
-            pst.setString(1, appIdentifier.getAppId());
-            pst.setString(2, id);
-        }, result -> {
-            if (result.next()) {
-                return UserInfoRowMapper.getInstance().mapOrThrow(result);
-            }
-            return null;
-        });
-        return userInfoWithTenantIds(start, appIdentifier, userInfo);
-    }
-
-    public static UserInfoPartial getUserInfoUsingId(Start start, Connection sqlCon, AppIdentifier appIdentifier, String id) throws SQLException, StorageQueryException {
-        // we don't need a FOR UPDATE here because this is already part of a transaction, and locked on app_id_to_user_id table
+    public static UserInfoPartial getUserInfoUsingId(Start start, Connection sqlCon, AppIdentifier appIdentifier,
+                                                     String id) throws SQLException, StorageQueryException {
+        // we don't need a FOR UPDATE here because this is already part of a transaction, and locked on
+        // app_id_to_user_id table
         String QUERY = "SELECT user_id, email, password_hash, time_joined FROM "
                 + getConfig(start).getEmailPasswordUsersTable() + " WHERE app_id = ? AND user_id = ?";
 
@@ -371,29 +366,23 @@ public class EmailPasswordQueries {
         });
     }
 
-    public static List<UserInfo> getUsersInfoUsingIdList(Start start, AppIdentifier appIdentifier, List<String> ids)
+    public static List<LoginMethod> getUsersInfoUsingIdList(Start start, Connection con, Set<String> ids,
+                                                            AppIdentifier appIdentifier)
             throws SQLException, StorageQueryException {
         if (ids.size() > 0) {
             // No need to filter based on tenantId because the id list is already filtered for a tenant
-            StringBuilder QUERY = new StringBuilder("SELECT user_id, email,  password_hash, time_joined "
-                    + "FROM " + getConfig(start).getEmailPasswordUsersTable());
-            QUERY.append(" WHERE app_id = ? AND user_id IN (");
-            for (int i = 0; i < ids.size(); i++) {
+            String QUERY = "SELECT user_id, email,  password_hash, time_joined "
+                    + "FROM " + getConfig(start).getEmailPasswordUsersTable()
+                    + " WHERE user_id IN (" + Utils.generateCommaSeperatedQuestionMarks(ids.size()) +
+                    " ) AND app_id = ?";
 
-                QUERY.append("?");
-                if (i != ids.size() - 1) {
-                    // not the last element
-                    QUERY.append(",");
+            List<UserInfoPartial> userInfos = execute(start, QUERY, pst -> {
+                int index = 1;
+                for (String id : ids) {
+                    pst.setString(index, id);
+                    index++;
                 }
-            }
-            QUERY.append(")");
-
-            List<UserInfoPartial> userInfos = execute(start, QUERY.toString(), pst -> {
-                pst.setString(1, appIdentifier.getAppId());
-                for (int i = 0; i < ids.size(); i++) {
-                    // i+2 cause this starts with 1 and not 0, and 1 is appId
-                    pst.setString(i + 2, ids.get(i));
-                }
+                pst.setString(index, appIdentifier.getAppId());
             }, result -> {
                 List<UserInfoPartial> finalResult = new ArrayList<>();
                 while (result.next()) {
@@ -401,30 +390,52 @@ public class EmailPasswordQueries {
                 }
                 return finalResult;
             });
-            return userInfoWithTenantIds(start, appIdentifier, userInfos);
+            fillUserInfoWithTenantIds_transaction(start, con, appIdentifier, userInfos);
+            fillUserInfoWithVerified_transaction(start, con, appIdentifier, userInfos);
+            return userInfos.stream().map(UserInfoPartial::toLoginMethod)
+                    .collect(Collectors.toList());
         }
         return Collections.emptyList();
     }
 
-    public static UserInfo getUserInfoUsingEmail(Start start, TenantIdentifier tenantIdentifier, String email) throws StorageQueryException, SQLException {
-        String QUERY = "SELECT ep_users_to_tenant.user_id as user_id, ep_users_to_tenant.email as email, "
-                + "ep_users.password_hash as password_hash, ep_users.time_joined as time_joined "
-                + "FROM " + getConfig(start).getEmailPasswordUserToTenantTable() + " AS ep_users_to_tenant "
-                + "JOIN " + getConfig(start).getEmailPasswordUsersTable() + " AS ep_users "
-                + "ON ep_users.app_id = ep_users_to_tenant.app_id AND ep_users.user_id = ep_users_to_tenant.user_id "
-                + "WHERE ep_users_to_tenant.app_id = ? AND ep_users_to_tenant.tenant_id = ? AND ep_users_to_tenant.email = ?";
+    public static String lockEmailAndTenant_Transaction(Start start, Connection con,
+                                                        TenantIdentifier tenantIdentifier,
+                                                        String email)
+            throws StorageQueryException, SQLException {
+        String QUERY = "SELECT user_id FROM " + getConfig(start).getEmailPasswordUserToTenantTable() +
+                " WHERE app_id = ? AND tenant_id = ? AND email = ? FOR UPDATE";
 
-        UserInfoPartial userInfo = execute(start, QUERY, pst -> {
+        return execute(con, QUERY, pst -> {
             pst.setString(1, tenantIdentifier.getAppId());
             pst.setString(2, tenantIdentifier.getTenantId());
             pst.setString(3, email);
         }, result -> {
             if (result.next()) {
-                return UserInfoRowMapper.getInstance().mapOrThrow(result);
+                return result.getString("user_id");
             }
             return null;
         });
-        return userInfoWithTenantIds(start, tenantIdentifier.toAppIdentifier(), userInfo);
+    }
+
+    public static String getPrimaryUserIdUsingEmail(Start start, Connection con, TenantIdentifier tenantIdentifier,
+                                                    String email)
+            throws StorageQueryException, SQLException {
+        String QUERY = "SELECT DISTINCT all_users.primary_or_recipe_user_id AS user_id "
+                + "FROM " + getConfig(start).getEmailPasswordUserToTenantTable() + " AS ep" +
+                " JOIN " + getConfig(start).getUsersTable() + " AS all_users" +
+                " ON ep.app_id = all_users.app_id AND ep.user_id = all_users.user_id" +
+                " WHERE ep.app_id = ? AND ep.tenant_id = ? AND ep.email = ?";
+
+        return execute(con, QUERY, pst -> {
+            pst.setString(1, tenantIdentifier.getAppId());
+            pst.setString(2, tenantIdentifier.getTenantId());
+            pst.setString(3, email);
+        }, result -> {
+            if (result.next()) {
+                return result.getString("user_id");
+            }
+            return null;
+        });
     }
 
     public static boolean addUserIdToTenant_Transaction(Start start, Connection sqlCon,
@@ -435,14 +446,15 @@ public class EmailPasswordQueries {
 
         { // all_auth_recipe_users
             String QUERY = "INSERT INTO " + getConfig(start).getUsersTable()
-                    + "(app_id, tenant_id, user_id, recipe_id, time_joined)"
-                    + " VALUES(?, ?, ?, ?, ?)" + " ON CONFLICT DO NOTHING";
+                    + "(app_id, tenant_id, user_id, primary_or_recipe_user_id, recipe_id, time_joined)"
+                    + " VALUES(?, ?, ?, ?, ?, ?)" + " ON CONFLICT DO NOTHING";
             update(sqlCon, QUERY, pst -> {
                 pst.setString(1, tenantIdentifier.getAppId());
                 pst.setString(2, tenantIdentifier.getTenantId());
                 pst.setString(3, userId);
-                pst.setString(4, EMAIL_PASSWORD.toString());
-                pst.setLong(5, userInfo.timeJoined);
+                pst.setString(4, userId);
+                pst.setString(5, EMAIL_PASSWORD.toString());
+                pst.setLong(6, userInfo.timeJoined);
             });
         }
 
@@ -462,7 +474,8 @@ public class EmailPasswordQueries {
         }
     }
 
-    public static boolean removeUserIdFromTenant_Transaction(Start start, Connection sqlCon, TenantIdentifier tenantIdentifier, String userId)
+    public static boolean removeUserIdFromTenant_Transaction(Start start, Connection sqlCon,
+                                                             TenantIdentifier tenantIdentifier, String userId)
             throws SQLException, StorageQueryException {
         { // all_auth_recipe_users
             String QUERY = "DELETE FROM " + getConfig(start).getUsersTable()
@@ -478,42 +491,62 @@ public class EmailPasswordQueries {
         // automatically deleted from emailpassword_user_to_tenant because of foreign key constraint
     }
 
-    private static UserInfo userInfoWithTenantIds(Start start, AppIdentifier appIdentifier, UserInfoPartial userInfo)
+    private static UserInfoPartial fillUserInfoWithVerified_transaction(Start start, Connection sqlCon,
+                                                                        AppIdentifier appIdentifier,
+                                                                        UserInfoPartial userInfo)
             throws SQLException, StorageQueryException {
         if (userInfo == null) return null;
-        try (Connection con = ConnectionPool.getConnection(start)) {
-            return userInfoWithTenantIds_transaction(start, con, appIdentifier, Arrays.asList(userInfo)).get(0);
-        }
+        return fillUserInfoWithVerified_transaction(start, sqlCon, appIdentifier, List.of(userInfo)).get(0);
     }
 
-    private static List<UserInfo> userInfoWithTenantIds(Start start, AppIdentifier appIdentifier, List<UserInfoPartial> userInfos)
+    private static List<UserInfoPartial> fillUserInfoWithVerified_transaction(Start start, Connection sqlCon,
+                                                                              AppIdentifier appIdentifier,
+                                                                              List<UserInfoPartial> userInfos)
             throws SQLException, StorageQueryException {
-        try (Connection con = ConnectionPool.getConnection(start)) {
-            return userInfoWithTenantIds_transaction(start, con, appIdentifier, userInfos);
+        List<EmailVerificationQueries.UserIdAndEmail> userIdsAndEmails = new ArrayList<>();
+        for (UserInfoPartial userInfo : userInfos) {
+            userIdsAndEmails.add(new EmailVerificationQueries.UserIdAndEmail(userInfo.id, userInfo.email));
         }
+        List<String> userIdsThatAreVerified = EmailVerificationQueries.isEmailVerified_transaction(start, sqlCon,
+                appIdentifier,
+                userIdsAndEmails);
+        Set<String> verifiedUserIdsSet = new HashSet<>(userIdsThatAreVerified);
+        for (UserInfoPartial userInfo : userInfos) {
+            if (verifiedUserIdsSet.contains(userInfo.id)) {
+                userInfo.verified = true;
+            } else {
+                userInfo.verified = false;
+            }
+        }
+        return userInfos;
     }
 
-    private static UserInfo userInfoWithTenantIds_transaction(Start start, Connection sqlCon, AppIdentifier appIdentifier, UserInfoPartial userInfo)
+    private static UserInfoPartial fillUserInfoWithTenantIds_transaction(Start start, Connection sqlCon,
+                                                                         AppIdentifier appIdentifier,
+                                                                         UserInfoPartial userInfo)
             throws SQLException, StorageQueryException {
         if (userInfo == null) return null;
-        return userInfoWithTenantIds_transaction(start, sqlCon, appIdentifier, Arrays.asList(userInfo)).get(0);
+        return fillUserInfoWithTenantIds_transaction(start, sqlCon, appIdentifier, Arrays.asList(userInfo)).get(0);
     }
 
-    private static List<UserInfo> userInfoWithTenantIds_transaction(Start start, Connection sqlCon, AppIdentifier appIdentifier, List<UserInfoPartial> userInfos)
+    private static List<UserInfoPartial> fillUserInfoWithTenantIds_transaction(Start start, Connection sqlCon,
+                                                                               AppIdentifier appIdentifier,
+                                                                               List<UserInfoPartial> userInfos)
             throws SQLException, StorageQueryException {
         String[] userIds = new String[userInfos.size()];
         for (int i = 0; i < userInfos.size(); i++) {
             userIds[i] = userInfos.get(i).id;
         }
 
-        Map<String, List<String>> tenantIdsForUserIds = GeneralQueries.getTenantIdsForUserIds_transaction(start, sqlCon, appIdentifier, userIds);
+        Map<String, List<String>> tenantIdsForUserIds = GeneralQueries.getTenantIdsForUserIds_transaction(start, sqlCon,
+                appIdentifier,
+                userIds);
         List<UserInfo> result = new ArrayList<>();
         for (UserInfoPartial userInfo : userInfos) {
-            result.add(new UserInfo(userInfo.id, userInfo.email, userInfo.passwordHash, userInfo.timeJoined,
-                    tenantIdsForUserIds.get(userInfo.id).toArray(new String[0])));
+            userInfo.tenantIds = tenantIdsForUserIds.get(userInfo.id).toArray(new String[0]);
         }
 
-        return result;
+        return userInfos;
     }
 
     private static class UserInfoPartial {
@@ -521,12 +554,22 @@ public class EmailPasswordQueries {
         public final long timeJoined;
         public final String email;
         public final String passwordHash;
+        public String[] tenantIds;
+        public Boolean verified;
+        public Boolean isPrimary;
 
         public UserInfoPartial(String id, String email, String passwordHash, long timeJoined) {
             this.id = id.trim();
             this.timeJoined = timeJoined;
             this.email = email;
             this.passwordHash = passwordHash;
+        }
+
+        public LoginMethod toLoginMethod() {
+            assert (tenantIds != null);
+            assert (verified != null);
+            return new LoginMethod(id, timeJoined, verified, email,
+                    passwordHash, tenantIds);
         }
     }
 
