@@ -17,6 +17,7 @@
 package io.supertokens.storage.postgresql.queries;
 
 import io.supertokens.pluginInterface.RowMapper;
+import io.supertokens.pluginInterface.authRecipe.LoginMethod;
 import io.supertokens.pluginInterface.exceptions.StorageQueryException;
 import io.supertokens.pluginInterface.exceptions.StorageTransactionLogicException;
 import io.supertokens.pluginInterface.multitenancy.AppIdentifier;
@@ -36,6 +37,7 @@ import java.sql.Connection;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static io.supertokens.pluginInterface.RECIPE_ID.PASSWORDLESS;
 import static io.supertokens.storage.postgresql.QueryExecutorTemplate.execute;
@@ -55,7 +57,8 @@ public class PasswordlessQueries {
                 + "time_joined BIGINT NOT NULL, "
                 + "CONSTRAINT " + Utils.getConstraintName(schema, usersTable, "user_id", "fkey")
                 + " FOREIGN KEY(app_id, user_id)"
-                + " REFERENCES " + Config.getConfig(start).getAppIdToUserIdTable() +  " (app_id, user_id) ON DELETE CASCADE,"
+                + " REFERENCES " + Config.getConfig(start).getAppIdToUserIdTable() +
+                " (app_id, user_id) ON DELETE CASCADE,"
                 + "CONSTRAINT " + Utils.getConstraintName(schema, usersTable, null, "pkey")
                 + " PRIMARY KEY (app_id, user_id)"
                 + ");";
@@ -79,7 +82,8 @@ public class PasswordlessQueries {
                 + " PRIMARY KEY (app_id, tenant_id, user_id),"
                 + "CONSTRAINT " + Utils.getConstraintName(schema, passwordlessUserToTenantTable, "user_id", "fkey")
                 + " FOREIGN KEY (app_id, tenant_id, user_id)"
-                + " REFERENCES " + Config.getConfig(start).getUsersTable() + "(app_id, tenant_id, user_id) ON DELETE CASCADE"
+                + " REFERENCES " + Config.getConfig(start).getUsersTable() +
+                "(app_id, tenant_id, user_id) ON DELETE CASCADE"
                 + ");";
         // @formatter:on
     }
@@ -98,7 +102,7 @@ public class PasswordlessQueries {
                 + "failed_attempts INT NOT NULL,"
                 + "CONSTRAINT " + Utils.getConstraintName(schema, devicesTable, "tenant_id", "fkey")
                 + " FOREIGN KEY(app_id, tenant_id)"
-                + " REFERENCES " + Config.getConfig(start).getTenantsTable() +  " (app_id, tenant_id) ON DELETE CASCADE,"
+                + " REFERENCES " + Config.getConfig(start).getTenantsTable() + " (app_id, tenant_id) ON DELETE CASCADE,"
                 + "CONSTRAINT " + Utils.getConstraintName(schema, devicesTable, null, "pkey")
                 + " PRIMARY KEY (app_id, tenant_id, device_id_hash)"
                 + ");";
@@ -126,7 +130,8 @@ public class PasswordlessQueries {
                 + " PRIMARY KEY (app_id, tenant_id, code_id),"
                 + "CONSTRAINT " + Utils.getConstraintName(schema, codesTable, "device_id_hash", "fkey")
                 + " FOREIGN KEY (app_id, tenant_id, device_id_hash)"
-                + " REFERENCES " + Config.getConfig(start).getPasswordlessDevicesTable() + "(app_id, tenant_id, device_id_hash)"
+                + " REFERENCES " + Config.getConfig(start).getPasswordlessDevicesTable() +
+                "(app_id, tenant_id, device_id_hash)"
                 + " ON DELETE CASCADE ON UPDATE CASCADE"
                 + ");";
     }
@@ -138,7 +143,8 @@ public class PasswordlessQueries {
 
     public static String getQueryToCreateDevicePhoneNumberIndex(Start start) {
         return "CREATE INDEX passwordless_devices_phone_number_index ON "
-                + Config.getConfig(start).getPasswordlessDevicesTable() + " (app_id, tenant_id, phone_number);"; // USING hash
+                + Config.getConfig(start).getPasswordlessDevicesTable() +
+                " (app_id, tenant_id, phone_number);"; // USING hash
     }
 
     public static String getQueryToCreateCodeDeviceIdHashIndex(Start start) {
@@ -151,8 +157,10 @@ public class PasswordlessQueries {
                 + Config.getConfig(start).getPasswordlessCodesTable() + "(app_id, tenant_id, created_at);";
     }
 
-    public static void createDeviceWithCode(Start start, TenantIdentifier tenantIdentifier, String email, String phoneNumber, String linkCodeSalt,
-                                            PasswordlessCode code) throws StorageTransactionLogicException, StorageQueryException {
+    public static void createDeviceWithCode(Start start, TenantIdentifier tenantIdentifier, String email,
+                                            String phoneNumber, String linkCodeSalt,
+                                            PasswordlessCode code)
+            throws StorageTransactionLogicException, StorageQueryException {
         start.startTransaction(con -> {
             Connection sqlCon = (Connection) con.getConnection();
             try {
@@ -197,7 +205,8 @@ public class PasswordlessQueries {
     }
 
     public static void incrementDeviceFailedAttemptCount_Transaction(Start start, Connection con,
-                                                                     TenantIdentifier tenantIdentifier, String deviceIdHash)
+                                                                     TenantIdentifier tenantIdentifier,
+                                                                     String deviceIdHash)
             throws SQLException, StorageQueryException {
         String QUERY = "UPDATE " + getConfig(start).getPasswordlessDevicesTable()
                 + " SET failed_attempts = failed_attempts + 1"
@@ -210,7 +219,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteDevice_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, String deviceIdHash)
+    public static void deleteDevice_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier,
+                                                String deviceIdHash)
             throws SQLException, StorageQueryException {
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessDevicesTable()
                 + " WHERE app_id = ? AND tenant_id = ? AND device_id_hash = ?";
@@ -221,7 +231,9 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteDevicesByPhoneNumber_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, @Nonnull String phoneNumber)
+    public static void deleteDevicesByPhoneNumber_Transaction(Start start, Connection con,
+                                                              TenantIdentifier tenantIdentifier,
+                                                              @Nonnull String phoneNumber)
             throws SQLException, StorageQueryException {
 
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessDevicesTable()
@@ -234,7 +246,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteDevicesByPhoneNumber_Transaction(Start start, Connection con, AppIdentifier appIdentifier, @Nonnull String phoneNumber, String userId)
+    public static void deleteDevicesByPhoneNumber_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                              @Nonnull String phoneNumber, String userId)
             throws SQLException, StorageQueryException {
 
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessDevicesTable()
@@ -251,7 +264,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteDevicesByEmail_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, @Nonnull String email)
+    public static void deleteDevicesByEmail_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier,
+                                                        @Nonnull String email)
             throws SQLException, StorageQueryException {
 
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessDevicesTable()
@@ -264,7 +278,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteDevicesByEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier, @Nonnull String email, String userId)
+    public static void deleteDevicesByEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                        @Nonnull String email, String userId)
             throws SQLException, StorageQueryException {
 
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessDevicesTable()
@@ -281,7 +296,8 @@ public class PasswordlessQueries {
         });
     }
 
-    private static void createCode_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, PasswordlessCode code)
+    private static void createCode_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier,
+                                               PasswordlessCode code)
             throws SQLException, StorageQueryException {
         String QUERY = "INSERT INTO " + getConfig(start).getPasswordlessCodesTable()
                 + "(app_id, tenant_id, code_id, device_id_hash, link_code_hash, created_at)"
@@ -311,7 +327,9 @@ public class PasswordlessQueries {
         });
     }
 
-    public static PasswordlessCode[] getCodesOfDevice_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, String deviceIdHash)
+    public static PasswordlessCode[] getCodesOfDevice_Transaction(Start start, Connection con,
+                                                                  TenantIdentifier tenantIdentifier,
+                                                                  String deviceIdHash)
             throws StorageQueryException, SQLException {
         // We do not lock here, since the device is already locked earlier in the transaction.
         String QUERY = "SELECT code_id, device_id_hash, link_code_hash, created_at FROM "
@@ -335,7 +353,9 @@ public class PasswordlessQueries {
         });
     }
 
-    public static PasswordlessCode getCodeByLinkCodeHash_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, String linkCodeHash)
+    public static PasswordlessCode getCodeByLinkCodeHash_Transaction(Start start, Connection con,
+                                                                     TenantIdentifier tenantIdentifier,
+                                                                     String linkCodeHash)
             throws StorageQueryException, SQLException {
         // We do not lock here, since the device is already locked earlier in the transaction.
         String QUERY = "SELECT code_id, device_id_hash, link_code_hash, created_at FROM "
@@ -354,7 +374,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static void deleteCode_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier, String codeId)
+    public static void deleteCode_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier,
+                                              String codeId)
             throws SQLException, StorageQueryException {
         String QUERY = "DELETE FROM " + getConfig(start).getPasswordlessCodesTable()
                 + " WHERE app_id = ? AND tenant_id = ? AND code_id = ?";
@@ -366,7 +387,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static UserInfo createUser(Start start, TenantIdentifier tenantIdentifier, String id, @Nullable String email, @Nullable String phoneNumber, long timeJoined)
+    public static UserInfo createUser(Start start, TenantIdentifier tenantIdentifier, String id, @Nullable String email,
+                                      @Nullable String phoneNumber, long timeJoined)
             throws StorageTransactionLogicException, StorageQueryException {
         return start.startTransaction(con -> {
             Connection sqlCon = (Connection) con.getConnection();
@@ -383,13 +405,15 @@ public class PasswordlessQueries {
 
                 { // all_auth_recipe_users
                     String QUERY = "INSERT INTO " + getConfig(start).getUsersTable()
-                            + "(app_id, tenant_id, user_id, recipe_id, time_joined)" + " VALUES(?, ?, ?, ?, ?)";
+                            + "(app_id, tenant_id, user_id, primary_or_recipe_user_id, recipe_id, time_joined)" +
+                            " VALUES(?, ?, ?, ?, ?, ?)";
                     update(sqlCon, QUERY, pst -> {
                         pst.setString(1, tenantIdentifier.getAppId());
                         pst.setString(2, tenantIdentifier.getTenantId());
                         pst.setString(3, id);
-                        pst.setString(4, PASSWORDLESS.toString());
-                        pst.setLong(5, timeJoined);
+                        pst.setString(4, id);
+                        pst.setString(5, PASSWORDLESS.toString());
+                        pst.setLong(6, timeJoined);
                     });
                 }
 
@@ -417,16 +441,20 @@ public class PasswordlessQueries {
                         pst.setString(5, phoneNumber);
                     });
                 }
-                UserInfo userInfo = userInfoWithTenantIds_transaction(start, sqlCon, tenantIdentifier.toAppIdentifier(), new UserInfoPartial(id, email, phoneNumber, timeJoined));
+                UserInfoPartial userInfo = new UserInfoPartial(id, email, phoneNumber, timeJoined);
+                fillUserInfoWithTenantIds_transaction(start, sqlCon, tenantIdentifier.toAppIdentifier(), userInfo);
+                fillUserInfoWithVerified_transaction(start, sqlCon, tenantIdentifier.toAppIdentifier(), userInfo);
                 sqlCon.commit();
-                return userInfo;
+                return new UserInfo(id, false,
+                        userInfo.toLoginMethod());
             } catch (SQLException throwables) {
                 throw new StorageTransactionLogicException(throwables);
             }
         });
     }
 
-    private static UserInfoWithTenantId[] getUserInfosWithTenant(Start start, Connection con, AppIdentifier appIdentifier, String userId)
+    private static UserInfoWithTenantId[] getUserInfosWithTenant(Start start, Connection con,
+                                                                 AppIdentifier appIdentifier, String userId)
             throws StorageQueryException, SQLException {
         String QUERY = "SELECT pl_users.user_id as user_id, pl_users.email as email, "
                 + "pl_users.phone_number as phone_number, pl_users_to_tenant.tenant_id as tenant_id "
@@ -495,7 +523,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static int updateUserEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier, String userId, String email)
+    public static int updateUserEmail_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                  String userId, String email)
             throws SQLException, StorageQueryException {
         {
             String QUERY = "UPDATE " + Config.getConfig(start).getPasswordlessUserToTenantTable()
@@ -519,7 +548,8 @@ public class PasswordlessQueries {
         }
     }
 
-    public static int updateUserPhoneNumber_Transaction(Start start, Connection con, AppIdentifier appIdentifier, String userId, String phoneNumber)
+    public static int updateUserPhoneNumber_Transaction(Start start, Connection con, AppIdentifier appIdentifier,
+                                                        String userId, String phoneNumber)
             throws SQLException, StorageQueryException {
         {
             String QUERY = "UPDATE " + Config.getConfig(start).getPasswordlessUserToTenantTable()
@@ -562,7 +592,8 @@ public class PasswordlessQueries {
         }
     }
 
-    public static PasswordlessDevice[] getDevicesByEmail(Start start, TenantIdentifier tenantIdentifier, @Nonnull String email)
+    public static PasswordlessDevice[] getDevicesByEmail(Start start, TenantIdentifier tenantIdentifier,
+                                                         @Nonnull String email)
             throws StorageQueryException, SQLException {
         String QUERY = "SELECT device_id_hash, email, phone_number, link_code_salt, failed_attempts FROM "
                 + getConfig(start).getPasswordlessDevicesTable()
@@ -609,7 +640,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static PasswordlessCode[] getCodesOfDevice(Start start, TenantIdentifier tenantIdentifier, String deviceIdHash)
+    public static PasswordlessCode[] getCodesOfDevice(Start start, TenantIdentifier tenantIdentifier,
+                                                      String deviceIdHash)
             throws StorageQueryException, SQLException {
         try (Connection con = ConnectionPool.getConnection(start)) {
             // We can call the transaction version here because it doesn't lock anything.
@@ -617,7 +649,8 @@ public class PasswordlessQueries {
         }
     }
 
-    public static PasswordlessCode[] getCodesBefore(Start start, TenantIdentifier tenantIdentifier, long time) throws StorageQueryException, SQLException {
+    public static PasswordlessCode[] getCodesBefore(Start start, TenantIdentifier tenantIdentifier, long time)
+            throws StorageQueryException, SQLException {
         String QUERY = "SELECT code_id, device_id_hash, link_code_hash, created_at FROM "
                 + getConfig(start).getPasswordlessCodesTable()
                 + " WHERE app_id = ? AND tenant_id = ? AND created_at < ?";
@@ -639,7 +672,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static PasswordlessCode getCode(Start start, TenantIdentifier tenantIdentifier, String codeId) throws StorageQueryException, SQLException {
+    public static PasswordlessCode getCode(Start start, TenantIdentifier tenantIdentifier, String codeId)
+            throws StorageQueryException, SQLException {
         String QUERY = "SELECT code_id, device_id_hash, link_code_hash, created_at FROM "
                 + getConfig(start).getPasswordlessCodesTable()
                 + " WHERE app_id = ? AND tenant_id = ? AND code_id = ?";
@@ -656,7 +690,8 @@ public class PasswordlessQueries {
         });
     }
 
-    public static PasswordlessCode getCodeByLinkCodeHash(Start start, TenantIdentifier tenantIdentifier, String linkCodeHash)
+    public static PasswordlessCode getCodeByLinkCodeHash(Start start, TenantIdentifier tenantIdentifier,
+                                                         String linkCodeHash)
             throws StorageQueryException, SQLException {
         try (Connection con = ConnectionPool.getConnection(start)) {
             // We can call the transaction version here because it doesn't lock anything.
@@ -664,28 +699,22 @@ public class PasswordlessQueries {
         }
     }
 
-    public static List<UserInfo> getUsersByIdList(Start start, AppIdentifier appIdentifier, List<String> ids)
+    public static List<LoginMethod> getUsersInfoUsingIdList(Start start, Connection con, Set<String> ids,
+                                                            AppIdentifier appIdentifier)
             throws SQLException, StorageQueryException {
         if (ids.size() > 0) {
             // No need to filter based on tenantId because the id list is already filtered for a tenant
-            StringBuilder QUERY = new StringBuilder("SELECT user_id, email, phone_number, time_joined "
-                    + "FROM " + getConfig(start).getPasswordlessUsersTable());
-            QUERY.append(" WHERE app_id = ? AND user_id IN (");
-            for (int i = 0; i < ids.size(); i++) {
-                QUERY.append("?");
-                if (i != ids.size() - 1) {
-                    // not the last element
-                    QUERY.append(",");
-                }
-            }
-            QUERY.append(")");
+            String QUERY = "SELECT user_id, email, phone_number, time_joined "
+                    + "FROM " + getConfig(start).getPasswordlessUsersTable() + " WHERE user_id IN (" +
+                    Utils.generateCommaSeperatedQuestionMarks(ids.size()) + ") AND app_id = ?";
 
-            List<UserInfoPartial> userInfos = execute(start, QUERY.toString(), pst -> {
-                pst.setString(1, appIdentifier.getAppId());
-                for (int i = 0; i < ids.size(); i++) {
-                    // i+2 cause this starts with 1 and not 0, 1 is appId
-                    pst.setString(i + 2, ids.get(i));
+            List<UserInfoPartial> userInfos = execute(start, QUERY, pst -> {
+                int index = 1;
+                for (String id : ids) {
+                    pst.setString(index, id);
+                    index++;
                 }
+                pst.setString(index, appIdentifier.getAppId());
             }, result -> {
                 List<UserInfoPartial> finalResult = new ArrayList<>();
                 while (result.next()) {
@@ -693,32 +722,20 @@ public class PasswordlessQueries {
                 }
                 return finalResult;
             });
-            return userInfoWithTenantIds(start, appIdentifier, userInfos);
+            fillUserInfoWithTenantIds_transaction(start, con, appIdentifier, userInfos);
+            fillUserInfoWithVerified_transaction(start, con, appIdentifier, userInfos);
+            return userInfos.stream().map(UserInfoPartial::toLoginMethod).collect(Collectors.toList());
         }
         return Collections.emptyList();
     }
 
-    public static UserInfo getUserById(Start start, AppIdentifier appIdentifier, String userId) throws StorageQueryException, SQLException {
+    public static UserInfoPartial getUserById(Start start, Connection sqlCon, AppIdentifier appIdentifier,
+                                              String userId)
+            throws StorageQueryException, SQLException {
+        // we don't need a LOCK here because this is already part of a transaction, and locked on app_id_to_user_id
+        // table
         String QUERY = "SELECT user_id, email, phone_number, time_joined FROM "
                 + getConfig(start).getPasswordlessUsersTable() + " WHERE app_id = ? AND user_id = ?";
-
-        UserInfoPartial userInfo = execute(start, QUERY, pst -> {
-            pst.setString(1, appIdentifier.getAppId());
-            pst.setString(2, userId);
-        }, result -> {
-            if (result.next()) {
-                return UserInfoRowMapper.getInstance().mapOrThrow(result);
-            }
-            return null;
-        });
-        return userInfoWithTenantIds(start, appIdentifier, userInfo);
-    }
-
-    public static UserInfoPartial getUserById(Start start, Connection sqlCon, AppIdentifier appIdentifier, String userId) throws StorageQueryException, SQLException {
-        // we don't need a FOR UPDATE here because this is already part of a transaction, and locked on app_id_to_user_id table
-        String QUERY = "SELECT user_id, email, phone_number, time_joined FROM "
-                + getConfig(start).getPasswordlessUsersTable()
-                + " WHERE app_id = ? AND user_id = ?";
 
         return execute(sqlCon, QUERY, pst -> {
             pst.setString(1, appIdentifier.getAppId());
@@ -731,65 +748,103 @@ public class PasswordlessQueries {
         });
     }
 
-    public static UserInfo getUserByEmail(Start start, TenantIdentifier tenantIdentifier, @Nonnull String email)
-            throws StorageQueryException, SQLException {
-        String QUERY = "SELECT pl_users.user_id as user_id, pl_users.email as email, "
-                + "pl_users.phone_number as phone_number, pl_users.time_joined as time_joined "
-                + "FROM " + getConfig(start).getPasswordlessUserToTenantTable() + " AS pl_users_to_tenant "
-                + "JOIN " + getConfig(start).getPasswordlessUsersTable() + " AS pl_users "
-                + "ON pl_users.app_id = pl_users_to_tenant.app_id AND pl_users.user_id = pl_users_to_tenant.user_id "
-                + "WHERE pl_users_to_tenant.app_id = ? AND pl_users_to_tenant.tenant_id = ? AND pl_users_to_tenant.email = ? ";
+    public static String lockEmailAndTenant_Transaction(Start start, Connection con, TenantIdentifier tenantIdentifier,
+                                                        String email) throws StorageQueryException, SQLException {
+        // we don't need a FOR UPDATE here because this is already part of a transaction, and locked on
+        // app_id_to_user_id table
+        String QUERY = "SELECT user_id FROM " + getConfig(start).getPasswordlessUserToTenantTable() +
+                " WHERE app_id = ? AND tenant_id = ? AND email = ? FOR UPDATE";
 
-        UserInfoPartial userInfo = execute(start, QUERY, pst -> {
+        return execute(con, QUERY, pst -> {
             pst.setString(1, tenantIdentifier.getAppId());
             pst.setString(2, tenantIdentifier.getTenantId());
             pst.setString(3, email);
         }, result -> {
             if (result.next()) {
-                return UserInfoRowMapper.getInstance().mapOrThrow(result);
+                return result.getString("user_id");
             }
             return null;
         });
-        return userInfoWithTenantIds(start, tenantIdentifier.toAppIdentifier(), userInfo);
     }
 
-    public static UserInfo getUserByPhoneNumber(Start start, TenantIdentifier tenantIdentifier, @Nonnull String phoneNumber)
-            throws StorageQueryException, SQLException {
-        String QUERY = "SELECT pl_users.user_id as user_id, pl_users.email as email, "
-                + "pl_users.phone_number as phone_number, pl_users.time_joined as time_joined "
-                + "FROM " + getConfig(start).getPasswordlessUserToTenantTable() + " AS pl_users_to_tenant "
-                + "JOIN " + getConfig(start).getPasswordlessUsersTable() + " AS pl_users "
-                + "ON pl_users.app_id = pl_users_to_tenant.app_id AND pl_users.user_id = pl_users_to_tenant.user_id "
-                + "WHERE pl_users_to_tenant.app_id = ? AND pl_users_to_tenant.tenant_id = ? AND pl_users_to_tenant.phone_number = ? ";
+    public static String lockPhoneAndTenant_Transaction(Start start, Connection con,
+                                                        TenantIdentifier tenantIdentifier,
+                                                        String phoneNumber)
+            throws SQLException, StorageQueryException {
 
-        UserInfoPartial userInfo = execute(start, QUERY, pst -> {
+        String QUERY = "SELECT user_id FROM " + getConfig(start).getPasswordlessUserToTenantTable() +
+                " WHERE app_id = ? AND tenant_id = ? AND phone_number = ? FOR UPDATE";
+        return execute(con, QUERY, pst -> {
             pst.setString(1, tenantIdentifier.getAppId());
             pst.setString(2, tenantIdentifier.getTenantId());
             pst.setString(3, phoneNumber);
         }, result -> {
             if (result.next()) {
-                return UserInfoRowMapper.getInstance().mapOrThrow(result);
+                return result.getString("user_id");
             }
             return null;
         });
-        return userInfoWithTenantIds(start, tenantIdentifier.toAppIdentifier(), userInfo);
     }
 
-    public static boolean addUserIdToTenant_Transaction(Start start, Connection sqlCon, TenantIdentifier tenantIdentifier, String userId)
+    public static String getPrimaryUserIdUsingEmail(Start start, Connection con, TenantIdentifier tenantIdentifier,
+                                                    String email)
+            throws StorageQueryException, SQLException {
+        String QUERY = "SELECT DISTINCT all_users.primary_or_recipe_user_id AS user_id "
+                + "FROM " + getConfig(start).getPasswordlessUserToTenantTable() + " AS pless" +
+                " JOIN " + getConfig(start).getUsersTable() + " AS all_users" +
+                " ON pless.app_id = all_users.app_id AND pless.user_id = all_users.user_id" +
+                " WHERE pless.app_id = ? AND pless.tenant_id = ? AND pless.email = ?";
+
+        return execute(con, QUERY, pst -> {
+            pst.setString(1, tenantIdentifier.getAppId());
+            pst.setString(2, tenantIdentifier.getTenantId());
+            pst.setString(3, email);
+        }, result -> {
+            if (result.next()) {
+                return result.getString("user_id");
+            }
+            return null;
+        });
+    }
+
+    public static String getPrimaryUserByPhoneNumber(Start start, Connection con, TenantIdentifier tenantIdentifier,
+                                                     @Nonnull String phoneNumber)
+            throws StorageQueryException, SQLException {
+        String QUERY = "SELECT DISTINCT all_users.primary_or_recipe_user_id AS user_id "
+                + "FROM " + getConfig(start).getPasswordlessUserToTenantTable() + " AS pless" +
+                " JOIN " + getConfig(start).getUsersTable() + " AS all_users" +
+                " ON pless.app_id = all_users.app_id AND pless.user_id = all_users.user_id" +
+                " WHERE pless.app_id = ? AND pless.tenant_id = ? AND pless.phone_number = ?";
+
+        return execute(con, QUERY, pst -> {
+            pst.setString(1, tenantIdentifier.getAppId());
+            pst.setString(2, tenantIdentifier.getTenantId());
+            pst.setString(3, phoneNumber);
+        }, result -> {
+            if (result.next()) {
+                return result.getString("user_id");
+            }
+            return null;
+        });
+    }
+
+    public static boolean addUserIdToTenant_Transaction(Start start, Connection sqlCon,
+                                                        TenantIdentifier tenantIdentifier, String userId)
             throws StorageQueryException, SQLException {
         UserInfoPartial userInfo = PasswordlessQueries.getUserById(start, sqlCon,
                 tenantIdentifier.toAppIdentifier(), userId);
 
         { // all_auth_recipe_users
             String QUERY = "INSERT INTO " + getConfig(start).getUsersTable()
-                    + "(app_id, tenant_id, user_id, recipe_id, time_joined)"
-                    + " VALUES(?, ?, ?, ?, ?)" + " ON CONFLICT DO NOTHING";
+                    + "(app_id, tenant_id, user_id, primary_or_recipe_user_id, recipe_id, time_joined)"
+                    + " VALUES(?, ?, ?, ?, ?, ?)" + " ON CONFLICT DO NOTHING";
             update(sqlCon, QUERY, pst -> {
                 pst.setString(1, tenantIdentifier.getAppId());
                 pst.setString(2, tenantIdentifier.getTenantId());
                 pst.setString(3, userInfo.id);
-                pst.setString(4, PASSWORDLESS.toString());
-                pst.setLong(5, userInfo.timeJoined);
+                pst.setString(4, userInfo.id);
+                pst.setString(5, PASSWORDLESS.toString());
+                pst.setLong(6, userInfo.timeJoined);
             });
         }
 
@@ -810,7 +865,8 @@ public class PasswordlessQueries {
         }
     }
 
-    public static boolean removeUserIdFromTenant_Transaction(Start start, Connection sqlCon, TenantIdentifier tenantIdentifier, String userId)
+    public static boolean removeUserIdFromTenant_Transaction(Start start, Connection sqlCon,
+                                                             TenantIdentifier tenantIdentifier, String userId)
             throws SQLException, StorageQueryException {
         { // all_auth_recipe_users
             String QUERY = "DELETE FROM " + getConfig(start).getUsersTable()
@@ -828,42 +884,73 @@ public class PasswordlessQueries {
         // automatically deleted from passwordless_user_to_tenant because of foreign key constraint
     }
 
-    private static UserInfo userInfoWithTenantIds(Start start, AppIdentifier appIdentifier, UserInfoPartial userInfo)
+    private static UserInfoPartial fillUserInfoWithVerified_transaction(Start start,
+                                                                        Connection sqlCon,
+                                                                        AppIdentifier appIdentifier,
+                                                                        UserInfoPartial userInfo)
             throws SQLException, StorageQueryException {
         if (userInfo == null) return null;
-        try (Connection con = ConnectionPool.getConnection(start)) {
-            return userInfoWithTenantIds_transaction(start, con, appIdentifier, Arrays.asList(userInfo)).get(0);
-        }
+        return fillUserInfoWithVerified_transaction(start, sqlCon, appIdentifier, List.of(userInfo)).get(0);
     }
 
-    private static List<UserInfo> userInfoWithTenantIds(Start start, AppIdentifier appIdentifier, List<UserInfoPartial> userInfos)
+    private static List<UserInfoPartial> fillUserInfoWithVerified_transaction(Start start,
+                                                                              Connection sqlCon,
+                                                                              AppIdentifier appIdentifier,
+                                                                              List<UserInfoPartial> userInfos)
             throws SQLException, StorageQueryException {
-        try (Connection con = ConnectionPool.getConnection(start)) {
-            return userInfoWithTenantIds_transaction(start, con, appIdentifier, userInfos);
+        List<EmailVerificationQueries.UserIdAndEmail> userIdsAndEmails = new ArrayList<>();
+        for (UserInfoPartial userInfo : userInfos) {
+            if (userInfo.email == null) {
+                // phone number, so we mark it as verified
+                userInfo.verified = true;
+            } else {
+                userIdsAndEmails.add(new EmailVerificationQueries.UserIdAndEmail(userInfo.id, userInfo.email));
+            }
         }
+        List<String> userIdsThatAreVerified = EmailVerificationQueries.isEmailVerified_transaction(start, sqlCon,
+                appIdentifier,
+                userIdsAndEmails);
+        Set<String> verifiedUserIdsSet = new HashSet<>(userIdsThatAreVerified);
+        for (UserInfoPartial userInfo : userInfos) {
+            if (userInfo.verified != null) {
+                // this means phone number
+                assert (userInfo.email == null);
+                continue;
+            }
+            if (verifiedUserIdsSet.contains(userInfo.id)) {
+                userInfo.verified = true;
+            } else {
+                userInfo.verified = false;
+            }
+        }
+        return userInfos;
     }
 
-    private static UserInfo userInfoWithTenantIds_transaction(Start start, Connection sqlCon, AppIdentifier appIdentifier, UserInfoPartial userInfo)
+    private static UserInfoPartial fillUserInfoWithTenantIds_transaction(Start start, Connection sqlCon,
+                                                                         AppIdentifier appIdentifier,
+                                                                         UserInfoPartial userInfo)
             throws SQLException, StorageQueryException {
         if (userInfo == null) return null;
-        return userInfoWithTenantIds_transaction(start, sqlCon, appIdentifier, Arrays.asList(userInfo)).get(0);
+        return fillUserInfoWithTenantIds_transaction(start, sqlCon, appIdentifier, List.of(userInfo)).get(0);
     }
 
-    private static List<UserInfo> userInfoWithTenantIds_transaction(Start start, Connection sqlCon, AppIdentifier appIdentifier, List<UserInfoPartial> userInfos)
+    private static List<UserInfoPartial> fillUserInfoWithTenantIds_transaction(Start start, Connection sqlCon,
+                                                                               AppIdentifier appIdentifier,
+                                                                               List<UserInfoPartial> userInfos)
             throws SQLException, StorageQueryException {
         String[] userIds = new String[userInfos.size()];
         for (int i = 0; i < userInfos.size(); i++) {
             userIds[i] = userInfos.get(i).id;
         }
 
-        Map<String, List<String>> tenantIdsForUserIds = GeneralQueries.getTenantIdsForUserIds_transaction(start, sqlCon, appIdentifier, userIds);
+        Map<String, List<String>> tenantIdsForUserIds = GeneralQueries.getTenantIdsForUserIds_transaction(start, sqlCon,
+                appIdentifier,
+                userIds);
         List<UserInfo> result = new ArrayList<>();
         for (UserInfoPartial userInfo : userInfos) {
-            result.add(new UserInfo(userInfo.id, userInfo.email, userInfo.phoneNumber, userInfo.timeJoined,
-                    tenantIdsForUserIds.get(userInfo.id).toArray(new String[0])));
+            userInfo.tenantIds = tenantIdsForUserIds.get(userInfo.id).toArray(new String[0]);
         }
-
-        return result;
+        return userInfos;
     }
 
     private static class PasswordlessDeviceRowMapper implements RowMapper<PasswordlessDevice, ResultSet> {
@@ -906,6 +993,9 @@ public class PasswordlessQueries {
         public final long timeJoined;
         public final String email;
         public final String phoneNumber;
+        public String[] tenantIds;
+        public Boolean verified;
+        public Boolean isPrimary;
 
         UserInfoPartial(String id, @Nullable String email, @Nullable String phoneNumber, long timeJoined) {
             this.id = id.trim();
@@ -917,6 +1007,13 @@ public class PasswordlessQueries {
 
             this.email = email;
             this.phoneNumber = phoneNumber;
+        }
+
+        public LoginMethod toLoginMethod() {
+            assert (tenantIds != null);
+            assert (verified != null);
+            return new LoginMethod(id, timeJoined, verified, new LoginMethod.PasswordlessInfo(email, phoneNumber),
+                    tenantIds);
         }
     }
 
